--- a/configs/data.yaml
+++ b/configs/data.yaml
@@ -1,7 +1,7 @@
 min_tokens: 150
-split:
-  train: 0.65
-  val:   0.15
-  test:  0.20
+max_tokens: 1500
+train: 0.65
+val:   0.15
+test:  0.20
 seed: 42
 count: 500
