split and cleaned data

--- a/configs/generate.yaml
+++ b/configs/generate.yaml
@@ -1,8 +1,23 @@
-models: ["gpt-3.5-turbo-0125", "gpt-4o-mini"]
-temperatures: [0.2, 0.7, 1.0]
-prompts:
-  - "Мәтінді ғылыми стильде, бірақ жаңа сөз қолданып қайта жазыңыз."
-  - "Келесі мәтінді жастар сленгімен қайта құрыңыз."
-
-styles: [""]
-
+models:
+    - gpt-3.5-turbo
+    - gpt-4-mini
+    - gpt-4.1
+  weights:
+    - 0.30
+    - 0.50
+    - 0.20
+  temperatures:
+    - 0.7
+    - 0.2
+    - 1
+  t_weights:
+    - 0.6
+    - 0.2
+    - 0.2
+  max_completion_tokens: 1500
+  prompts:
+    - "Мәтінді өз сөзіңмен қайта жаз, мағынасын дәл сақта:\n\n\"{text}\""
+    - "Келесі қазақша абзацты мағынаны өзгеріссіз қалдырып, басқа стильде жаз:\n\n\"{text}\""
+    - "Берілген мәтінді ресми стильде қайта жаз:\n\n\"{text}\""
+    - "Бұл мәтінді қарапайым, түсінікті тілде қайта құрастыр:\n\n\"{text}\""
+    - "Мәтінді қысқартылған, әрі мәнді етіп қайта жаз:\n\n\"{text}\""
