pertial data complete

--- a/configs/generate.yaml
+++ b/configs/generate.yaml
@@ -1,23 +1,25 @@
 models:
-    - gpt-3.5-turbo
-    - gpt-4-mini
-    - gpt-4.1
-  weights:
-    - 0.30
-    - 0.50
-    - 0.20
-  temperatures:
-    - 0.7
-    - 0.2
-    - 1
-  t_weights:
-    - 0.6
-    - 0.2
-    - 0.2
-  max_completion_tokens: 1500
-  prompts:
-    - "Мәтінді өз сөзіңмен қайта жаз, мағынасын дәл сақта:\n\n\"{text}\""
-    - "Келесі қазақша абзацты мағынаны өзгеріссіз қалдырып, басқа стильде жаз:\n\n\"{text}\""
-    - "Берілген мәтінді ресми стильде қайта жаз:\n\n\"{text}\""
-    - "Бұл мәтінді қарапайым, түсінікті тілде қайта құрастыр:\n\n\"{text}\""
-    - "Мәтінді қысқартылған, әрі мәнді етіп қайта жаз:\n\n\"{text}\""
+  - gpt-3.5-turbo
+  - gpt-4.1
+  - gpt-4
+weights:
+  - 0.80
+  - 0.10
+  - 0.10
+
+temperatures:
+  - 0.7
+  - 0.2
+  - 1
+tempweights:
+  - 0.5
+  - 0.25
+  - 0.25
+max_completion_tokens: 1000
+prompts:
+  - "Мәтінді өз сөзіңмен қайта жаз, мағынасын дәл сақта:\n\n\"{text}\ \n  жаупты тек мәтін түрінде жібер, ешқандай түсініктемелер мен кіріспе сөздерді қолданба"
+  - "Келесі қазақша абзацты мағынаны өзгеріссіз қалдырып, басқа стильде жаз:\n\n\"{text}\n жаупты тек мәтін түрінде жібер, ешқандай түсініктемелер мен кіріспе сөздерді қолданба"
+  - "Берілген мәтінді ресми стильде қайта жаз:\n\n\"{text}\ жаупты тек мәтін түрінде жібер, ешқандай түсініктемелер мен кіріспе сөздерді қолданба"
+  - "Бұл мәтінді қарапайым, түсінікті тілде қайта құрастыр:\n\n\"{text}\ жаупты тек мәтін түрінде жібер, ешқандай түсініктемелер мен кіріспе сөздерді қолданба"
+  - "Мәтінді қысқартылған, әрі мәнді етіп қайта жаз:\n\n\"{text}\ жаупты тек мәтін түрінде жібер, ешқандай түсініктемелер мен кіріспе сөздерді қолданба"
+rate_limit_sleep: 0.1
