--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -1,8 +1,7 @@
-batch: 16
-gradient_accum: 2         
+batch: 4
+gradient_accum: 4         
 lr: 2e-5
-epochs: 6
-patience: 2
-weight_decay: 0.01
+epochs: 4
 seed: 42
 model_name: kz-transformers/kaz-roberta-conversational
+output_dir: test_bert_output
