--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -4,4 +4,4 @@ lr: 2e-5
 epochs: 4
 seed: 42
 model_name: kz-transformers/kaz-roberta-conversational
-output_dir: test_bert_output
+output_dir: kaz-roberta-train
